Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5537

Impala does not retry RPCs that fail in SSL_read()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.9.0, Impala 2.10.0
    • Impala 2.10.0
    • Backend
    • None

    Description

      IMPALA-5388 changed the RPC retry logic to be much less aggressive. This increased the probability of failing queries under load when using SSL. We should consider retrying RPCs if the underlying socket throws an exception during SSL_read().

      Attachments

        Issue Links

          Activity

            People

              kwho Michael Ho
              lv Lars Volker
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: